[tool.poetry]
name = "script-aws"
version = "0.1.0"
description = ""
authors = ["Harrisson Bernal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.33.7"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.33.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
